Added search by initials